# course_work_2

./: main.py  pyproject.toml
data/: vacancies.json
htmlcov/: index.html
src/: abstract.py  utils.py  vacancy.py  working_api.py  working_file.py
tests/: test_utils.py  test_working_api.py  test_working_file.py
